--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="js/constants.js"></script>
-    <script src="js/Background.js"></script>
-    <script src="js/Shark.js"></script>
-    <script src="js/Coconut.js"></script>
-    <script src="js/Bar.js"></script>
-    <script src="js/Player.js"></script>
-    <script src="js/Game.js"></script>
+    <script src="./js/constants.js"></script>
+    <script src="./js/Background.js"></script>
+    <script src="./js/Shark.js"></script>
+    <script src="./js/Coconut.js"></script>
+    <script src="./js/Bar.js"></script>
+    <script src="./js/Player.js"></script>
+    <script src="./js/Game.js"></script>
     <script src="main.js"></script>
 
     <h1>Your score: <span></span></h1>
