is it working now?

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="./js/Bar.js"></script>
     <script src="./js/Player.js"></script>
     <script src="./js/Game.js"></script>
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
 
     <h1>Your score: <span></span></h1>
 </body>
