--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <script src="./js/Shark.js"></script>
     <script src="./js/Coconut.js"></script>
     <script src="./js/Bar.js"></script>
+    <script src="./js/Cocktail.js"></script>
+    <script src="./js/Beer.js"></script>
     <script src="./js/Player.js"></script>
     <script src="./js/Game.js"></script>
     <script src="./main.js"></script>
