--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
     <script src="./main.js"></script>
 
     <h1>Your score: <span></span></h1>
+    <h2>Breathaliser: <span></span></h2>
   </body>
 </html>
