bonus points for drinks added. Instructions added

--- a/index.html
+++ b/index.html
@@ -23,5 +23,14 @@
 
     <h1>Your score: <span></span></h1>
     <h2>Breathaliser: <span></span></h2>
+    <p>
+      Use your left and right arrow keys to move tipsy Tiffany and the up key to
+      jump.
+    </p>
+    <p>Watch out for falling coconuts and sharks.</p>
+    <p>
+      Tiff is an alcoholic. Additional drinks get you more points, but be
+      careful not to drink too much.
+    </p>
   </body>
 </html>
