first parts of drunkmode implemented, need to adjust all obstacles that are normally static

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <h1>Your score: <span></span></h1>
     <h2>Breathaliser: <span></span></h2>
+    <h3>Seconds until sobriety: <span id="timer"></span></h3>
     <p>
       Use your left and right arrow keys to move tipsy Tiffany and the up key to
       jump.
