--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="./js/Bar.js"></script>
     <script src="./js/Cocktail.js"></script>
     <script src="./js/Beer.js"></script>
+    <script src="./js/Ammo.js"></script>
     <script src="./js/Player.js"></script>
     <script src="./js/Game.js"></script>
     <script src="./main.js"></script>
