high score added

--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
     <script src="./js/Game.js"></script>
     <script src="./main.js"></script>
 
-    <h1>Your score: <span></span></h1>
-    <h2>Breathaliser: <span></span></h2>
-    <h3>Seconds until sobriety: <span id="timer"></span></h3>
+    <h1>Your score: <span id="current-score"></span> || Top Score: <span id="top-score"></span></h1>
+    <h2>Breathaliser: <span id="breath"></span> || Seconds until sobriety: <span id="timer"></span></h2>
     <p>
       Use your left and right arrow keys to move tipsy Tiffany and the up key to
       jump.
