changed ids to classes as github was unhappy with me

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <script src="./js/Game.js"></script>
     <script src="./main.js"></script>
 
-    <h1>Your score: <span id="current-score"></span> || Top Score: <span id="top-score"></span></h1>
-    <h2>Breathaliser: <span id="breath"></span> || Seconds until sobriety: <span id="timer"></span></h2>
+    <h1>Your score: <span class="current-score"></span> || Top Score: <span class="top-score"></span></h1>
+    <h2>Breathaliser: <span class="breath"></span> || Seconds until sobriety: <span class="timer"></span></h2>
     <p>
       Use your left and right arrow keys to move tipsy Tiffany and the up key to
       jump.
