just keep on saving..

--- a/index.html
+++ b/index.html
@@ -28,10 +28,17 @@
       Use your left and right arrow keys to move tipsy Tiffany and the up key to
       jump.
     </p>
-    <p>Watch out for falling coconuts and sharks.</p>
+    <p>
+      Watch out for falling coconuts and sharks.
+    </p>
     <p>
       Tiff is an alcoholic. Additional drinks get you more points, but be
       careful not to drink too much.
     </p>
+    <p>
+      You have one bottle to defend yourself from sharks. Throw it with the space bar.
+    </p>
+
+    <!-- <button class="start-button">Start Game</button> -->
   </body>
 </html>
