--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Piña Collider</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/addons/p5.sound.min.js"></script> -->
-    <link rel="stylesheet" href="style.css" />
+    <script src=“https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/addons/p5.sound.min.js”></script>
   </head>
   <body>
     <script src="./js/constants.js"></script>
