--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <h2>
       Your score:<span class="current-score"></span> || Top Score:
-      <span class="top-score"></span>
+      <span class="top-score">-</span>
     </h2>
     <h3>
       Breathaliser: <span class="breath"></span> 
